# RandevuRezervasyonSistemi

./: .env  .env.example  .gitignore  GITHUB_PR_REHBER.md  MOBILE_API_DOCUMENTATION.md  README.md  docker-compose.yml  randevu-aws-key.pem  requirements.txt
backend/: .dockerignore  Dockerfile  alembic.ini  config.py  database.py  main.py  pyproject.toml  requirements.txt  reset_db.py
backend/alembic/: env.py
backend/alembic/versions/: 193a3e72f9a9_create_resource_and_availability_tables.py  265bd9f88a3e_create_pricing_rules_table.py  37faafde08eb_create_resource_and_availability_tables.py  4c0cb1a3eb1a_create_pricing_rules_table.py  4cfc75b2a042_create_initial_users_table.py  50b4ab8ad21a_create_initial_users_table.py  8b0d8190de9d_initial_schema_with_all_models.py  90eb8f568b04_add_start_date_and_end_date_to_pricing_.py  a055b5b706a0_resource_tablosuna_yeni_rezervasyon_.py  df31a5a1f312_initial_creation_of_all_application_.py
backend/core/: security.py  settings.py
backend/crud/: __init__.py  availability.py  booking.py  bookings.py  payments.py  pricing.py  resource.py  user.py
backend/models/: __init__.py  availability.py  booking.py  payment.py  pricing.py  resource.py  user.py
backend/nginx/: default.conf
backend/randevu_backend/: core_settings.py  database.py  main.py
backend/randevu_backend/models/: user.py
backend/routers/: __init__.py  auth.py  availability.py  bookings.py  payments.py  pricing.py  resource.py  users.py
backend/schemas/: __init__.py  availability.py  booking.py  payment.py  pricing.py  resource.py  user.py
docs/: INSTALL.md  (+1 more)
(+44 files in other folders)
